Fix navbar visible in print

--- a/app/containers/Navbar/styles.css
+++ b/app/containers/Navbar/styles.css
@@ -166,3 +166,9 @@
     transform: translateY(-30px);
   }
 }
+
+@media print {
+  .navbar {
+    display: none;
+  }
+}
